--- a/index.html
+++ b/index.html
@@ -335,9 +335,8 @@
                 <div class=" col-sm-4 col-md col-sm-4  col-12 col">
                     <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
                     <!--headin5_amrc-->
-                    <p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                        Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+                    <p class="mb10">Bussy in building big</p>
+                    <p><i class="fa fa-location-arrow"></i> Bangalore </p>
                     <p><i class="fa fa-phone"></i> +91-9999878398 </p>
                     <p><i class="fa fa fa-envelope"></i> info@example.com </p>
 
@@ -381,13 +380,13 @@
 
                     <ul class="footer_ul2_amrc">
                         <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-                            <p>Lorem Ipsum is simply dummy text of the printing...<a href="#">http://pindid.com/</a></p>
+                            <p>Tweet 1<a href="#">http://pindid.com/</a></p>
                         </li>
                         <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-                            <p>Lorem Ipsum is simply dummy text of the printing...<a href="#">http://pindid.com/</a></p>
+                            <p>Tweet 2<a href="#">http://pindid.com/</a></p>
                         </li>
                         <li><a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-                            <p>Lorem Ipsum is simply dummy text of the printing...<a href="#">http://pindid.com/</a></p>
+                            <p>Tweet 3<a href="#">http://pindid.com/</a></p>
                         </li>
                     </ul>
                     <!--footer_ul2_amrc ends here-->
@@ -406,7 +405,7 @@
                 <li><a href="http://pindid.com">Contact</a></li>
             </ul>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="text-center">Copyright @2017 | Designed With by <a href="#">Your Company Name</a></p>
+            <p class="text-center">Copyright @2017 | Designed With by <a href="#">Kapuri Inernet Service Application</a></p>
 
             <ul class="social_footer_ul">
                 <li><a href="http://pindid.com"><i class="fab fa-facebook-f"></i></a></li>
