--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Erisha-Womens-Printed-Palazzo-Set_Yellow/dp/B07Q5MJRPJ/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-1-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=1cd1d3ec7497b085251c1ae9ae91a0ec&language=en_IN"
+                            href="https://www.amazon.in/Erisha-Womens-Printed-Palazzo-Set_Yellow/dp/B07Q5MJRPJ/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-1-spons&psc=1&linkCode=li3&tag=pindid-21&linkId=1cd1d3ec7497b085251c1ae9ae91a0ec&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07Q5MJRPJ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07Q5MJRPJ"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07Q5MJRPJ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07Q5MJRPJ"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -217,10 +217,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Womens-Embroidered-Anarkali-Palazzo-Jacket/dp/B07NSTZ8GK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-2-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=ac801b4ac4e84ab3b197252f00294b00&language=en_IN"
+                            href="https://www.amazon.in/Womens-Embroidered-Anarkali-Palazzo-Jacket/dp/B07NSTZ8GK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-2-spons&psc=1&linkCode=li3&tag=pindid-21&linkId=ac801b4ac4e84ab3b197252f00294b00&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NSTZ8GK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07NSTZ8GK"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NSTZ8GK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07NSTZ8GK"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -232,10 +232,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Erisha-Womens-Cotton-Palazzo-Set_Rama/dp/B07Q3KWHCM/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-3-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=fb950c947ff4523a067239f7318bef1e&language=en_IN"
+                            href="https://www.amazon.in/Erisha-Womens-Cotton-Palazzo-Set_Rama/dp/B07Q3KWHCM/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-3-spons&psc=1&linkCode=li3&tag=pindid-21&linkId=fb950c947ff4523a067239f7318bef1e&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07Q3KWHCM&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07Q3KWHCM"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07Q3KWHCM&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07Q3KWHCM"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -249,10 +249,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Harshana-Kurta-palazzo-set-women/dp/B07NDTWHPK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-4-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=5c6161f904d9b8c9b5a9744721689027&language=en_IN"
+                            href="https://www.amazon.in/Harshana-Kurta-palazzo-set-women/dp/B07NDTWHPK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-4-spons&psc=1&linkCode=li3&tag=pindid-21&linkId=5c6161f904d9b8c9b5a9744721689027&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NDTWHPK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07NDTWHPK"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NDTWHPK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07NDTWHPK"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -265,10 +265,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/OnePlus-Mirror-Black-128GB-Storage/dp/B07DJHV6VZ/ref=as_li_ss_il?keywords=mobiles&qid=1556272658&s=gateway&sr=8-2-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=c3a2c042fdd0657fbfb31bdc38c8231f&language=en_IN"
+                            href="https://www.amazon.in/OnePlus-Mirror-Black-128GB-Storage/dp/B07DJHV6VZ/ref=as_li_ss_il?keywords=mobiles&qid=1556272658&s=gateway&sr=8-2-spons&psc=1&linkCode=li3&tag=pindid-21&linkId=c3a2c042fdd0657fbfb31bdc38c8231f&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07DJHV6VZ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07DJHV6VZ"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07DJHV6VZ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07DJHV6VZ"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -281,10 +281,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Apple-iPhone-XR-64GB-Black/dp/B07JWV47JW/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-3&linkCode=li3&tag=empoweringcon-21&linkId=f5c5da96472525320f1503efa267b097&language=en_IN"
+                            href="https://www.amazon.in/Apple-iPhone-XR-64GB-Black/dp/B07JWV47JW/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-3&linkCode=li3&tag=pindid-21&linkId=f5c5da96472525320f1503efa267b097&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07JWV47JW&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07JWV47JW"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07JWV47JW&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B07JWV47JW"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -296,10 +296,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Apple-iPhone-Silver-64GB-Storage/dp/B0711T2L8K/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-7&linkCode=li3&tag=empoweringcon-21&linkId=9dbe3dbc0d156ded7a774678ea7f20a8&language=en_IN"
+                            href="https://www.amazon.in/Apple-iPhone-Silver-64GB-Storage/dp/B0711T2L8K/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-7&linkCode=li3&tag=pindid-21&linkId=9dbe3dbc0d156ded7a774678ea7f20a8&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0711T2L8K&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B0711T2L8K"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0711T2L8K&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B0711T2L8K"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -312,10 +312,10 @@
                 <div class="col-md-3">
                     <div class="card">
                         <a style="text-align:center;"
-                            href="https://www.amazon.in/Nokia-105-Black/dp/B0745BNFYV/ref=as_li_ss_il?keywords=mobiles&qid=1556272789&rnid=1485076031&s=electronics&sr=1-26&linkCode=li3&tag=empoweringcon-21&linkId=df6adfe587b8fb33eea4420ed92b5db5&language=en_IN"
+                            href="https://www.amazon.in/Nokia-105-Black/dp/B0745BNFYV/ref=as_li_ss_il?keywords=mobiles&qid=1556272789&rnid=1485076031&s=electronics&sr=1-26&linkCode=li3&tag=pindid-21&linkId=df6adfe587b8fb33eea4420ed92b5db5&language=en_IN"
                             target="_blank"><img border="0"
-                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0745BNFYV&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN"></a><img
-                            src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B0745BNFYV"
+                                src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0745BNFYV&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=pindid-21&language=en_IN"></a><img
+                            src="https://ir-in.amazon-adsystem.com/e/ir?t=pindid-21&language=en_IN&l=li3&o=31&a=B0745BNFYV"
                             width="1" height="1" border="0" alt=""
                             style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
@@ -405,7 +405,7 @@
                 <li><a href="http://pindid.com">Contact</a></li>
             </ul>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="text-center">Copyright @2017 | Designed With by <a href="#">Kapuri Inernet Service Application</a></p>
+            <p class="text-center">Copyright @2019 | <a href="#">Kapuri Inernet Service Application</a></p>
 
             <ul class="social_footer_ul">
                 <li><a href="http://pindid.com"><i class="fab fa-facebook-f"></i></a></li>
